@@ -17,6 +17,7 @@
 - Fix: [#5788] Empty scenario names cause invisible entries in scenario list.
 - Fix: [#6101] Rides remain in ride list window briefly after demolition.
 - Fix: [#6115] Random title screen music not random on launch.
+- Fix: [#6118, #6245, #6366] Tracked animated vehicles not animating.
 - Fix: [#6133] Construction rights not shown after selecting buy mode.
 - Fix: [#6188] Viewports not being clipped properly when zoomed out in OpenGL mode.
 - Fix: [#6193] All rings in Space Rings use the same secondary colour.
